# cpp_starter_project

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  cmake-variants.json  gen_vs_sln.bat
.github/workflows/: codacy-analysis.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: coin-flipper.hpp  foo.hpp
src/: CMakeLists.txt  coin-flipper.cpp  foo.cpp  main.cpp
tests/: CMakeLists.txt  gtest-download.cmake  gtest.cmake  mockrng.cpp  tester.cpp
